--- a/merostay_api/templates/Hotel_list.html
+++ b/merostay_api/templates/Hotel_list.html
@@ -121,6 +121,7 @@
                             </a>
                         </td>
                         <td class="  font-light px-6 py-4 whitespace-nowrap">
+                          <a href="delete/{{hotel.slug}}">
                             <button class="bg-red-700 p-2 rounded-[5px] cursor-pointer hover:bg-red-900 hover:scale-110  duration-300 ease-in-out ml-4">Delete</button>
                         </a>
                         </td>
